@@ -78,19 +78,6 @@ name|lucene
 operator|.
 name|spatial
 operator|.
-name|DisjointSpatialFilter
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|spatial
-operator|.
 name|prefix
 operator|.
 name|tree
@@ -768,26 +755,6 @@ operator|.
 name|getOperation
 argument_list|()
 decl_stmt|;
-if|if
-condition|(
-name|op
-operator|==
-name|SpatialOperation
-operator|.
-name|IsDisjointTo
-condition|)
-return|return
-operator|new
-name|DisjointSpatialFilter
-argument_list|(
-name|this
-argument_list|,
-name|args
-argument_list|,
-name|getFieldName
-argument_list|()
-argument_list|)
-return|;
 name|Shape
 name|shape
 init|=
