@@ -991,37 +991,6 @@ name|Contains
 argument_list|)
 expr_stmt|;
 block|}
-annotation|@
-name|Test
-annotation|@
-name|Repeat
-argument_list|(
-name|iterations
-operator|=
-name|ITERATIONS
-argument_list|)
-DECL|method|testDisjoint
-specifier|public
-name|void
-name|testDisjoint
-parameter_list|()
-throws|throws
-name|IOException
-block|{
-name|setupGrid
-argument_list|(
-operator|-
-literal|1
-argument_list|)
-expr_stmt|;
-name|doTest
-argument_list|(
-name|SpatialOperation
-operator|.
-name|IsDisjointTo
-argument_list|)
-expr_stmt|;
-block|}
 comment|/** See LUCENE-5062, {@link ContainsPrefixTreeFilter#multiOverlappingIndexedShapes}. */
 annotation|@
 name|Test
